--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest/globals": true
   },
   "parser": "babel-eslint",
   "extends": [
@@ -21,7 +22,7 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react", "prettier", "jest"],
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true, "semi": false }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
