--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.0.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "history": "^4.10.1",
+    "postcss": "^7.0.35",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -19,15 +27,17 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typeface-montserrat": "^1.1.13",
     "typeface-source-serif-pro": "^1.1.13",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "stage": "REACT_APP_PROFILE=stage react-scripts start",
-    "build": "REACT_APP_PROFILE=${REACT_APP_PROFILE} react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "stage": "REACT_APP_PROFILE=stage craco start",
+    "build": "REACT_APP_PROFILE=${REACT_APP_PROFILE} craco build",
+    "test": "craco test",
+    "test-ci": "CI=true craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
